[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cccg"
version = "0.0.1"
authors = [
    {name = "Rafael Jesús Guillén Osorio", email = "arthexis@gmail.com"},
]
description = "Collectible Children's Card Game"
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["game", "card", "collectible", "cccg"]
license = {text = "MIT"}
classifiers = [
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
]
dependencies = [
    "pygame>=2.4",
]

[project.urls]
Source = "https://github.com/arthexis/cccg"
Bug-Tracker = "https://github.com/arthexis/cccg/issues"


[project.scripts]
cccg = "cccg.__main__:main"

